--- a/common-elements/index.html
+++ b/common-elements/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Common Elements</title>
-  </head>
-  <body>
-    <nav>
-      <a href="./../index.html">Home</a>
-      <ul>
-        <li>
-          <a href="./index.html">Common Elements</a>
-        </li>
-        <li>
-          <a href="./../anatomy-and-navigation/index.html">Anatomy and Navigation</a>
-        </li>
-        <li>
-          <a href="./../card/index.html">Card</a>
-        </li>
-        <li>
-          <a href="./../journalism/index.html">Journalism</a>
-        </li>
-      </ul>
-    </nav>
-    <h1>Common Elements</h1>
-    <p>
-      This is the page that matches up with the Common Elements art board. Replicate the semantic
-      HTML structure of the art board in the space below.
-    </p>
-    <p>
-      <a
-        href="https://xd.adobe.com/view/0724155e-dae4-491f-4d90-426404fd181d-7115/screen/9194cc40-72ad-4549-b739-3eadb8288d30/Common-Elements"
-        target="_blank"
-        >View the Art Board</a
-      >
-    </p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Common Elements</title>
+</head>
+
+<body>
+  <nav>
+    <a href="./../index.html">Home</a>
+    <ul>
+      <li>
+        <a href="./index.html">Common Elements</a>
+      </li>
+      <li>
+        <a href="./../anatomy-and-navigation/index.html">Anatomy and Navigation</a>
+      </li>
+      <li>
+        <a href="./../card/index.html">Card</a>
+      </li>
+      <li>
+        <a href="./../journalism/index.html">Journalism</a>
+      </li>
+    </ul>
+  </nav>
+  <h1>Common Elements</h1>
+  <p>
+    This is the page that matches up with the Common Elements art board. Replicate the semantic
+    HTML structure of the art board in the space below.
+  </p>
+  <p>
+    <a href="https://xd.adobe.com/view/0724155e-dae4-491f-4d90-426404fd181d-7115/screen/9194cc40-72ad-4549-b739-3eadb8288d30/Common-Elements"
+      target="_blank">View the Art Board</a>
+  </p>
+  <main>
 
     <!--
       1
@@ -43,56 +43,62 @@
       Children: h1, h2, h3, h4, h5, h6, p
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div
     -->
-
-    <!--
+    <div>
+      <!--
       2
       TODO: Make an h1 element
       Annotation: 2
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h1
     -->
+      <h1>Lorem, ipsum.</h1>
 
-    <!--
+      <!--
       3
       TODO: Make an h2 element
       Annotation: 3
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h2
     -->
+      <h2>Lorem, ipsum.</h2>
 
-    <!--
+      <!--
       4
       TODO: Make an h3 element
       Annotation: 4
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h3
     -->
+      <h3>Lorem, ipsum.</h3>
 
-    <!--
+      <!--
       5
       TODO: Make an h4 element
       Annotation: 5
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h4
     -->
+      <h4>Lorem, ipsum.</h4>
 
-    <!--
+      <!--
       6
       TODO: Make an h5 element
       Annotation: 6
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h5
     -->
+      <h5>Lorem, ipsum.</h5>
 
-    <!--
+      <!--
       7
       TODO: Make an h6 element
       Annotation: 7
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h6
     -->
+      <h6>Lorem, ipsum.</h6>
 
-    <!--
+      <!--
       8
       TODO: Make a p element
       Annotation: 8
@@ -104,7 +110,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p
     -->
 
-    <!--
+      <!--
       9
       TODO: Make a b element
       Annotation: 9
@@ -112,13 +118,19 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/b
     -->
 
-    <!--
+      <!--
       10
       TODO: Make an i element
       Annotation: 10
       Text: sodales
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/i
     -->
+      <p>
+        Lorem ipsum <b>dolor</b> sit amet consectetur adipisicing elit. Ea error laudantium molestiae nobis mollitia
+        nihil
+        praesentium commodi impedit quasi eligendi, <i>voluptate</i> blanditiis eos aliquam molestias asperiores optio
+        distinctio iste cum.</p>
+    </div>
 
     <!--
       11
@@ -127,16 +139,22 @@
       Children: ul, ol, address, a, input, select
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div
     -->
+    <div>
 
-    <!--
+      <!--
       12
       TODO: Make an ul element
       Annotation: 12
       Children: li, li, li
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul
     -->
+      <ul>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>Orange</li>
+      </ul>
 
-    <!--
+      <!--
       13
       TODO: Make a li element
       Annotation: 13
@@ -144,7 +162,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       14
       TODO: Make a li element
       Annotation: 14
@@ -152,7 +170,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       15
       TODO: Make a li element
       Annotation: 15
@@ -160,15 +178,20 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       16
       TODO: Make an ol element
       Annotation: 16
       Children: li, li, li
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol
     -->
+      <ol>
+        <li>Do this</li>
+        <li>Do that</li>
+        <li>Start over</li>
+      </ol>
 
-    <!--
+      <!--
       17
       TODO: Make a li element
       Annotation: 17
@@ -176,7 +199,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       18
       TODO: Make a li element
       Annotation: 18
@@ -184,7 +207,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       19
       TODO: Make a li element
       Annotation: 19
@@ -192,15 +215,16 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       20
       TODO: Make an address element
       Annotation: 20
       Text: 1600 Pennsylvania Ave NW, Washington, DC, 20500
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/address
     -->
+      <address>1600 Pennsylvania Ave NW, Washington, DC, 20500</address>
 
-    <!--
+      <!--
       21
       TODO: Make an a element
       Annotation: 21
@@ -211,8 +235,11 @@
         - target: _blank
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a
     -->
+      <a href="https://reddit.com" title="Visit Reddit" target="_blank">
+        Click here to visit Reddit.com
+      </a>
 
-    <!--
+      <!--
       22
       TODO: Make an input element
       Annotation: 22
@@ -221,16 +248,22 @@
         - placeholder: Type in your favorite color
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input
     -->
+      <input type="text" placeholder="Type in your favorite color" />
 
-    <!--
+      <!--
       23
       TODO: Make a select element
       Annotation: 23
       Children: option, option, option
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/select
     -->
+      <select name="" id="">
+        <option value="blue">Blue</option>
+        <option value="red">Red</option>
+        <option value="yellow">Yellow</option>
+      </select>
 
-    <!--
+      <!--
       24
       TODO: Make an option element
       Annotation: 23
@@ -240,7 +273,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option
     -->
 
-    <!--
+      <!--
       25
       TODO: Make an option element
       Annotation: 23
@@ -250,7 +283,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option
     -->
 
-    <!--
+      <!--
       26
       TODO: Make an option element
       Annotation: 23
@@ -259,6 +292,7 @@
         - value: yellow
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option
     -->
+    </div>
 
     <!--
       27
@@ -267,8 +301,9 @@
       Children: img, video
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div
     -->
+    <div>
 
-    <!--
+      <!--
       28
       TODO: Make a img element
       Annotation: 25
@@ -278,8 +313,9 @@
         - width: 100%
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
     -->
+      <img src="../images/loops.jpg" alt="bröther may i have some lööps" width="100%" />
 
-    <!--
+      <!--
       29
       TODO: Make a video element
       Annotation: 26
@@ -289,15 +325,9 @@
         - width: 100%
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/video
     -->
+      <video src="../videos/hey-man-sings.mp4" width="100%" controls></video>
+    </div>
+  </main>
+</body>
 
-    <!--
-      30
-      TODO: Make a source element
-      Annotation: 26
-      Attributes:
-        - src: hey-man-sings.mp4 (figure out the relative path)
-        - type: video/mp4
-      Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/source
-    -->
-  </body>
 </html>
