--- a/anatomy-and-navigation/index.html
+++ b/anatomy-and-navigation/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anatomy and Navigation</title>
-  </head>
-  <body>
-    <nav>
-      <a href="./../index.html">Home</a>
-      <ul>
-        <li>
-          <a href="./../common-elements/index.html">Common Elements</a>
-        </li>
-        <li>
-          <a href="./index.html">Anatomy and Navigation</a>
-        </li>
-        <li>
-          <a href="./../card/index.html">Card</a>
-        </li>
-        <li>
-          <a href="./../journalism/index.html">Journalism</a>
-        </li>
-      </ul>
-    </nav>
-    <h1>Anatomy and Navigation</h1>
-    <p>
-      This is the page that matches up with the Anatomy and Navigation art board. Replicate the
-      semantic HTML structure of the art board in the space below.
-    </p>
-    <p>
-      <a
-        href="https://xd.adobe.com/view/0724155e-dae4-491f-4d90-426404fd181d-7115/screen/edc09dee-70ff-4cbb-aa17-53558705c720/Anatomy-and-Navigation"
-        target="_blank"
-        >View the Art Board</a
-      >
-    </p>
 
-    <!--
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anatomy and Navigation</title>
+</head>
+
+<body>
+  <nav>
+    <a href="./../index.html">Home</a>
+    <ul>
+      <li>
+        <a href="./../common-elements/index.html">Common Elements</a>
+      </li>
+      <li>
+        <a href="./index.html">Anatomy and Navigation</a>
+      </li>
+      <li>
+        <a href="./../card/index.html">Card</a>
+      </li>
+      <li>
+        <a href="./../journalism/index.html">Journalism</a>
+      </li>
+    </ul>
+  </nav>
+  <h1>Anatomy and Navigation</h1>
+  <p>
+    This is the page that matches up with the Anatomy and Navigation art board. Replicate the
+    semantic HTML structure of the art board in the space below.
+  </p>
+  <p>
+    <a href="https://xd.adobe.com/view/0724155e-dae4-491f-4d90-426404fd181d-7115/screen/edc09dee-70ff-4cbb-aa17-53558705c720/Anatomy-and-Navigation"
+      target="_blank">View the Art Board</a>
+  </p>
+
+  <!--
       31
       TODO: Make a nav element
       Annotation: 1
       Children: a, ul
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav
     -->
+  <nav>
 
     <!--
       32
@@ -65,6 +65,7 @@
         - width: 100%
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
     -->
+    <a href="#" title="Logo"><img src="../images/logo.jpg" alt="Logo of Company XYZ" width="100%" /></a>
 
     <!--
       34
@@ -93,14 +94,22 @@
         - title: link
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a
     -->
+    <ul>
+      <li><a href="#" title="link">link</a></li>
+      <li><a href="#" title="link">link</a></li>
+      <li><a href="#" title="link">link</a></li>
+    </ul>
 
-    <!--
+  </nav>
+
+  <!--
       41
       TODO: Make a main element
       Annotation: 7
       Children: h1, p, p
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/main
     -->
+  <main>
 
     <!--
       42
@@ -109,6 +118,7 @@
       Text: Lorem ipsum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/h1
     -->
+    <h1>Lorem ipsum</h1>
 
     <!--
       43
@@ -122,6 +132,12 @@
         massa
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p
     -->
+    <p>
+      Torquent vulputate dolor habitant eu augue mus sed varius est vivamus duis pretium porttitor
+      hac fames efficitur blandit ligula fermentum posuere in rhoncus tempus vehicula tincidunt
+      pellentesque dis tortor auctor velit class iaculis dictum adipiscing curabitur sapien
+      euismod tempor placerat morbi finibus sodales cras vestibulum congue proin ac suscipit
+      massa</p>
 
     <!--
       44
@@ -134,14 +150,21 @@
         blandit porta arcu nam cras tellus per velit aliquam mi molestie augue vitae
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p
     -->
+    <p>
+      Natoque sociosqu metus nunc leo urna eleifend curae suscipit habitasse lorem amet morbi
+      pretium montes vestibulum magnis maecenas erat gravida suspendisse quam etiam aliquet rutrum
+      malesuada lectus iaculis adipiscing dolor ligula lacinia tempus cubilia vehicula tempor in
+      blandit porta arcu nam cras tellus per velit aliquam mi molestie augue vitae</p>
+  </main>
 
-    <!--
+  <!--
       45
       TODO: Make a footer element
       Annotation: 11
       Children: nav
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/footer
     -->
+  <footer>
 
     <!--
       46
@@ -150,8 +173,9 @@
       Children: ul
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav
     -->
+    <nav>
 
-    <!--
+      <!--
       47
       TODO: Make a ul element
       Annotation: 13
@@ -159,7 +183,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul
     -->
 
-    <!--
+      <!--
       48, 50, 52, 54, 56, 58
       TODO: Make a li element
       Annotation: 14, 15, 16, 16, 18, 19
@@ -168,7 +192,7 @@
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li
     -->
 
-    <!--
+      <!--
       49, 51, 52, 55, 57, 59
       TODO: Make an a element
       Annotation: 14, 15, 16, 16, 18, 19
@@ -178,5 +202,16 @@
         - title: Gravida ornare fermentum
       Documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a
     -->
-  </body>
+      <ul>
+        <li><a href="#" title="Gravida ornare fermentum">Gravida ornare fermentum</a></li>
+        <li><a href="#" title="Gravida ornare fermentum">Gravida ornare fermentum</a></li>
+        <li><a href="#" title="Gravida ornare fermentum">Gravida ornare fermentum</a></li>
+        <li><a href="#" title="Gravida ornare fermentum">Gravida ornare fermentum</a></li>
+        <li><a href="#" title="Gravida ornare fermentum">Gravida ornare fermentum</a></li>
+        <li><a href="#" title="Gravida ornare fermentum">Gravida ornare fermentum</a></li>
+      </ul>
+    </nav>
+  </footer>
+</body>
+
 </html>
